source/blender/sequencer/SEQ_channels.h
@@ -15,6 +15,7 @@ struct Editing;
 struct ListBase;
 struct Scene;
 struct SeqTimelineChannel;
+struct Sequence;
 
 struct ListBase *SEQ_channels_displayed_get(struct Editing *ed);
 void SEQ_channels_displayed_set(struct Editing *ed, struct ListBase *channels);
@@ -28,6 +29,7 @@ char *SEQ_channel_name_get(struct ListBase *channels, const int channel_index);
 bool SEQ_channel_is_locked(const struct SeqTimelineChannel *channel);
 bool SEQ_channel_is_muted(const struct SeqTimelineChannel *channel);
 int SEQ_channel_index_get(const struct SeqTimelineChannel *channel);
+ListBase *SEQ_get_channels_by_seq(struct ListBase *seqbase, const struct Sequence *seq);
 
 #ifdef __cplusplus
 }
